config-sync/namespaces/tenant-a/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-tenant-a
  namespace: team-a
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes-tenant-a
